--- a/Quizwanie/Web.config
+++ b/Quizwanie/Web.config
@@ -11,7 +11,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Quizwanie-20161105110446.mdf;Initial Catalog=aspnet-Quizwanie-20161105110446;Integrated Security=True"
       providerName="System.Data.SqlClient" />
-    <add name="QuestionDBContext" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\Questions.mdf;Integrated Security=True"
+    <add name="QuestionDBContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Quizwanie.mdf;Initial Catalog=aspnet-Quizwanie-Questions"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
@@ -75,6 +75,11 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
+    <contexts>
+      <context type="Quizwanie.Models.QuestionDBContext, Quizwanie">
+        <databaseInitializer type="Quizwanie.Models.FillDb, Quizwanie" />
+      </context>
+    </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="mssqllocaldb" />
